# news-analysis

./: .dockerignore  .env.example  .gitignore  README.md  justfile  pyproject.toml
.playwright-cli/: page-2026-05-13T10-23-31-881Z.yml
apps/analysis-service/: pyproject.toml
apps/analysis-service/src/analysis_service/application/: ports.py  topic_forecast.py  use_cases.py
apps/analysis-service/src/analysis_service/domain/: errors.py  model.py
apps/analysis-service/src/analysis_service/infrastructure/: classifiers.py  gemini_forecast_client.py  groq_forecast_client.py  ml_report_queue.py  ml_report_storage.py  topic_forecast_queue.py  topic_forecast_retrieval_client.py  topic_forecast_storage.py
apps/analysis-service/src/analysis_service/main/: app.py  container.py  settings.py
apps/analysis-service/src/analysis_service/presentation/: errors.py  router.py
apps/analysis-service/src/analysis_service/workers/: broker.py  tasks.py
apps/analysis-service/tests/: test_api.py  test_container.py  test_domain.py  test_gemini_forecast_api.py  test_gemini_forecast_client.py  test_groq_forecast_api.py  test_groq_forecast_client.py  test_infrastructure.py  test_ml_report_api.py  test_ml_report_infrastructure.py  test_topic_forecast_api.py  test_topic_forecast_core.py  test_topic_forecast_infrastructure.py  test_use_cases.py
apps/api-gateway/: pyproject.toml
apps/api-gateway/src/api_gateway/application/: errors.py  ports.py  use_cases.py
apps/api-gateway/src/api_gateway/infrastructure/: analysis_client.py  dialog_client.py  retrieval_client.py
apps/api-gateway/src/api_gateway/main/: app.py  container.py  settings.py
apps/api-gateway/src/api_gateway/presentation/: errors.py  health.py  router.py  sse.py
apps/api-gateway/tests/: test_api_analysis.py  test_api_chat.py  test_api_retrieval.py  test_chat_use_cases.py  test_container.py  test_dialog_infrastructure.py  test_health.py  test_infrastructure.py  test_retrieval_infrastructure.py  test_retrieval_use_cases.py  test_sse.py  test_use_cases.py
apps/dialog-service/: pyproject.toml
apps/dialog-service/src/dialog_service/: __init__.py
apps/dialog-service/src/dialog_service/application/: __init__.py  ports.py  use_cases.py
apps/dialog-service/src/dialog_service/domain/: __init__.py  errors.py  model.py
apps/dialog-service/src/dialog_service/infrastructure/: __init__.py  fallback_generator.py  llm_generator.py  prompt_builder.py  template_generator.py
apps/dialog-service/src/dialog_service/main/: __init__.py  app.py  container.py  settings.py
apps/dialog-service/src/dialog_service/presentation/: __init__.py  errors.py  router.py
apps/dialog-service/tests/: test_dialog_api.py  test_dialog_container.py  test_dialog_domain.py  test_dialog_use_cases.py  test_fallback_generator.py  test_llm_generator.py  test_prompt_builder.py  test_template_generator.py
apps/news-service/: pyproject.toml
apps/news-service/src/news_service/application/: ports.py  use_cases.py
apps/news-service/src/news_service/domain/: dataset.py  errors.py  model.py
apps/news-service/src/news_service/infrastructure/: csv_news_source.py  local_dataset_storage.py  retrieval_client.py  taskiq_queue.py
apps/news-service/src/news_service/main/: app.py  container.py  settings.py
apps/news-service/src/news_service/presentation/: errors.py  router.py
apps/news-service/src/news_service/workers/: broker.py  events.py  tasks.py
apps/news-service/tests/: test_csv_news_source.py  test_local_dataset_storage.py  test_news_api.py  test_news_container.py  test_news_domain.py  test_news_use_cases.py  test_retrieval_indexer.py  test_taskiq_queue.py  test_worker_events.py
apps/retrieval-service/: pyproject.toml
apps/retrieval-service/src/retrieval_service/application/: ports.py  use_cases.py
apps/retrieval-service/src/retrieval_service/domain/: errors.py  model.py
apps/retrieval-service/src/retrieval_service/infrastructure/: embeddings.py  qdrant_repository.py
apps/retrieval-service/src/retrieval_service/main/: app.py  container.py  settings.py
apps/retrieval-service/src/retrieval_service/presentation/: errors.py  router.py
apps/retrieval-service/tests/: test_domain.py  test_retrieval_api.py  test_retrieval_container.py  test_retrieval_domain.py  test_retrieval_infrastructure.py  test_retrieval_use_cases.py  test_topic_retrieval_api.py
data/raw/: economic_news.csv
deploy/: compose.yaml
deploy/docker/: analysis-service.Dockerfile  api-gateway.Dockerfile  dialog-service.Dockerfile  frontend-web.Dockerfile  frontend-web.nginx.conf  news-service.Dockerfile  retrieval-service.Dockerfile
docs/: architecture.md  demo.md
docs/coursework/: structure.md  thesis-draft.md
docs/deployment/: model-modes-and-large-datasets.md
docs/final/: README.md  coursework-defense-presentation.pptx  coursework-explanatory-note.docx  coursework-project-explanation.docx  defense-qa.md  defense-speech.md  Прудиев-КР-Пояснительная_записка.docx
docs/final/qa/: demo-smoke-output.txt  render-note.md  requirements-checklist.md  structure-report.json
docs/presentation/: outline.md  speaker-notes.md
frontend/web/: index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: main.tsx
research/: README.md  pyproject.toml
research/notebooks/: economic_news_analysis.ipynb
research/scripts/economic_news_research/: __init__.py  cli.py  data.py  eda.py  embedding.py  metrics.py  model_selection.py  modeling.py  paths.py  reporting.py  results.py  text_normalization.py  tracking.py  transformer.py  weak_labeling.py
research/tests/: test_cli.py  test_data.py  test_eda.py  test_embedding.py  test_metrics.py  test_modeling.py  test_reporting.py  test_results.py  test_text_normalization.py  test_tracking.py  test_transformer.py  test_weak_labeling.py
research/tests/fixtures/: news_impact_sample.csv
tests/: test_prepare_dataset.py  test_prepare_fnspid.py
tools/: build_final_coursework_docx.py  build_final_coursework_pptx.mjs  build_project_explanation_docx.py  demo_smoke.py  prepare_dataset.py  prepare_fnspid.py  trained_smoke.py
(+68 files in other folders)
