[project]
name = "economic-news-dialog-system"
version = "0.1.0"
description = "Coursework monorepo for a local dialog system for economic news analysis"
requires-python = ">=3.12"
dependencies = [
  "economic-news-research",
]

[dependency-groups]
dev = [
  "accelerate>=1.10",
  "httpx>=0.28",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "mlflow>=2.19",
  "pandas>=2.2",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "scikit-learn>=1.6",
  "sentence-transformers>=3.4",
  "seaborn>=0.13",
  "torch>=2.6",
  "transformers>=4.48",
  "ty>=0.0.1a1",
]

[tool.uv.workspace]
members = [
  "packages/framework",
  "packages/contracts",
  "apps/api-gateway",
  "apps/analysis-service",
  "apps/dialog-service",
  "apps/retrieval-service",
  "research",
]

[tool.uv.sources]
economic-news-dialog-service = { workspace = true }
economic-news-research = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "research/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["apps", "packages"]
pythonpath = [
  "packages/framework/src",
  "packages/contracts/src",
  "apps/api-gateway/src",
  "apps/analysis-service/src",
  "apps/dialog-service/src",
  "apps/retrieval-service/src",
  "research/scripts",
]
asyncio_mode = "auto"

[tool.ty.src]
include = ["apps", "packages", "research/scripts"]
