[project]
name = "economic-news-research"
version = "0.1.0"
description = "Research pipeline for economic news impact classification"
requires-python = ">=3.12"
dependencies = [
  "joblib>=1.4",
  "matplotlib>=3.9",
  "mlflow>=2.19",
  "pandas>=2.2",
  "scikit-learn>=1.6",
  "seaborn>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/economic_news_research"]
