[project]
name = "economic-news-dialog-service"
version = "0.1.0"
description = "Dialog generation service for the economic news dialog system"
requires-python = ">=3.12"
dependencies = [
  "dishka>=1.4",
  "economic-news-contracts",
  "economic-news-framework",
  "fastapi>=0.115",
  "granian>=1.7",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dialog_service"]

[tool.uv.sources]
economic-news-framework = { workspace = true }
economic-news-contracts = { workspace = true }
