[project]
name = "economic-news-news-service"
version = "0.1.0"
description = "News ingestion service for economic news dialog system"
requires-python = ">=3.12"
dependencies = [
  "economic-news-framework",
  "economic-news-contracts",
  "fastapi>=0.115",
  "granian>=1.7",
  "dishka>=1.4",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "zapros>=0.10",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_service"]

[tool.uv.sources]
economic-news-framework = { workspace = true }
economic-news-contracts = { workspace = true }
